[package]
name = "osier-server"
version = "0.1.0"
authors = ["xie_zhongtao <xie_zhongtao@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rusqlite = "0.21.0"
time = "0.1"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
serde_json = "1.0"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
glob = "0.3.0"
libc = "0.2.67"
clap = "2.33.0"
lazy_static = "1.4.0"
num_cpus = "1.0"
mustache = "*"
log = "0.4.8"
env_logger = "0.7.1"
[build-dependencies]
cc = "1.0"
glob = "0.3.0"